# nim

./: .gitmodules  build.sh  dev.sh  readme.md  rmw.nimble
lib/: Cargo.toml  dist.sh  gen.sh  roaring64map.nim
lib/src/: lib.rs
src/: rmw.nim
