[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#roaring = "0.8.1"

[lib]
crate-type = ["staticlib"]

[profile.release]
opt-level = 3
lto = true
panic = 'unwind'
debug-assertions = false
overflow-checks = false
