[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#roaring = "0.8.1"

[lib]
crate-type = ["staticlib"]

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1
debug-assertions = false
overflow-checks = false
